--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -48,6 +48,53 @@
         </p>
     </div>
 
+    <div class="container-fluid">
+        <h4>Fluid Container </h4>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, quisquam eum facilis neque nulla possimus mollitia nemo odit eligendi iure asperiores hic harum deleniti minima voluptatibus provident libero accusantium doloribus.
+        </p>
+    </div>
+
+    <h4>Flex Box</h4>
+    <div class="flex-conainer">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    <h4>Flex Wrap</h4>
+    <div class="wrap">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+    </div> 
+
+    <h4>Flex Flow</h4>
+    <div class="flex-flow">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>  
+    </div>
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
