--- a/Bootstrap-2/index.html
+++ b/Bootstrap-2/index.html
@@ -221,6 +221,49 @@
       </div>
     </section>
 
+    
+    <!-- footer -->
+    <footer id="footer" class="bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="first content">
+              <h2>Follow Us</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet iusto magnam molestiae dolore cumque accusantium autem repellendus? Maiores quaerat fugit cupiditate possimus vel.</p>
+            </div>
+            <div class="social d-flex flew-row">
+              <a href="#"><i class="fab fa-twitter-square"></i></a>
+              <a href="#"><i class="fab fa-facebook-square"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="second content">
+              <h2>Contact Us</h2>
+              <form action="index.html" method="post">
+                <div class="email">
+                  <div class="text py-2">
+                    Email *
+                  </div>
+                  <input type="email" class="py-2" name="" value="">
+                </div>
+                <div class="msg">
+                  <div class="text py-2">
+                    Message *
+                  </div>
+                  <textarea name="name" id="" cols="30" rows="2"></textarea>
+                </div>
+                <div class="btn">
+                  <button class="btn btn-light" type="button" name="button">Send</button>
+                </div>
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
